# backstage-server-lab

./: .env.example  .gitignore  02_rna_3d_training_filled.ipynb  LICENSE  Makefile  README.md  mise.toml  pyproject.toml
.streamlit/: config.toml
artifacts/: baseline_leaderboard.json  expanded_challenge_results.json  garden_state.json  hypotheses_shelf.json  kaggle_catalogue.json  kaggle_leaderboard.json  kaggle_leaderboard_v2.json  kaggle_scoring_ledger.jsonl  notebook_submission_registry.jsonl  operator_events.jsonl  pipeline_runs.jsonl  top_notebook_analysis.json  top_notebook_recipes.yaml  validation_report.json
catalogue/: notebook_sources.yaml  top_kaggle_notebooks.yaml
configs/: exp1.yaml  portal.yaml  prometheus.yml  rna_technique_matrix.yaml  validation_bench.yaml
docs/: COMPLETION_LEDGERS.md  DASHBOARD_LAYOUTS.md  DEV_JOURNAL.md  DOCS_INDEX.md  ENGINEERING_MEMO_ALGO_COMPOSITION.md  FOOLPROOF_WALKTHROUGH.md  GPU_WORKER_OPERATIONS.md  INTEGRATION_COHERENCE_CHECKS.md  KAGGLE_RNA_CATALOGUE.md  KAGGLE_RNA_NOTEBOOK_MINIMAP.md  LIVE_ENDPOINTS.md  MEANINGFUL_RESULTS_RUNBOOK.md  METHOD_BRIEFS.md  METRICS_CATALOG.md  MLOPS_VALIDATION_BENCH.md  NOTEBOOK_FABRIC.md  NOTEBOOK_REPRO_SIGMABOROV_TOP1.md  PAPER_PROJECT_CARDS.md  READING_TRACK_RNA_PLAYGROUND.md  REPO_OBSERVABILITY.md  RNA_PIPELINE_ANALYTICS.md  RNA_RESEARCH_SUMMARIES.md  RNA_TECHNIQUE_MATRIX_VALIDATION.md  ROADMAP_30D_EXECUTION.md  ROADMAP_PERSPECTIVES.md  SCORING_MODEL.md  SCRIPT_EXECUTION_LEDGER.md  STACK_DOCTOR_LATEST.md  TOP_NOTEBOOK_DIGEST.md  VAST_CICD_AND_WALKTHROUGH.md  VAST_QUICKSTART.md  (+4 more)
(+124 files in other folders)
