[project]
name = "backstage-server-lab"
version = "0.1.0"
description = "Single-node lab workspace for Vast.ai/Jupyter with minimal MLOps spine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jupyterlab>=4.2.0",
  "mlflow>=2.18.0",
  "tensorboard>=2.18.0",
  "pandas>=2.2.0",
  "pyyaml>=6.0.1",
  "psutil>=6.0.0",
  "rich>=13.9.0",
  "typer>=0.12.0",
  "torch>=2.5.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7.0",
  "pytest>=8.3.0"
]
